tests/ui/fmt/format-string-error-3.stderr
error: invalid format string: python's f-string debug `=` is not supported in rust, use `dbg(x)` instead
  --> $DIR/format-string-error-3.rs:4:16
   |
LL |     println!("{=}", x);
   |               -^ expected `}` in format string
   |               |
   |               because of this opening brace
   |
   = note: to print `{`, you can escape it using `{{`
help: use rust debug printing macro
   |
LL -     println!("{=}", x);
LL +     dbg!(x);
   |

error: aborting due to 1 previous error

