tests/ui/fmt/format-string-error-3.rs
//@ run-rustfix
fn main() {
    let x = 32;
    println!("{=}", x); //~ ERROR invalid format string: python's f-string debug
}
